# pCraft

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LogWrite.py  README.md  amigraph.py  amilog.py  build-pluginsdoc.py  db2logs.py  dbdump.py  defaultlog.py  matrixdot.py  pcap2log.py  pcraft.py  pcrafter  pcraftlog.py  requirements.txt  setup.py
PCraft/: Functions.py  Plugins.py  PluginsData.py
PCraft/functions/: fromcsv.py  getvar.py  hostname.py
PCraft/plugins/: Cheat.py  Controller.py  DNSConnection.py  GenerateNewDomain.py  HTTPConnection.py  HTTPPostConnection.py  HostnameFromIP.py  MakeVariables.py  PcapImport.py  Ping.py  PrintVariables.py  SMTPReceive.py  TcpRst.py  _utils.py
ami/: CMakeLists.txt  README.md  README.rst
ami/doc/: ami-guide.txt
ami/editors/emacs/: ami-mode.el
ami/editors/notepad-plus-plus/: ami.xml
ami/editors/visual-studio-code/ami/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
ami/editors/visual-studio-code/ami/syntaxes/: ami.tmLanguage.json
ami/lib/: CMakeLists.txt  action.c  ami.c  ast.c  astnode.c  base64.c  cache.c  csvread.c  flow.c  nast.c  parse.y  rc4.c  scan.l  strutil.c  tree.c  variable.c
ami/lib/ami2/: ami2.c  ast-coreaction.c  ast-node.c  ast.c
ami/lib/crypto/: README.md
ami/lib/include/ami/: action.h  ami.h  ast.h  astnode.h  base64.h  cache.h  csvread.h  flow.h  nast.h  rc4.h  strutil.h  tree.h  variable.h
ami/lib/include/ami2/: ami2.h  ast-actions.h  ast-node.h  ast.h  errors.h
ami/lib/tests/: CMakeLists.txt  simple.c
ami/man/: amierr-1.7
ami/python/: CMakeLists.txt  README.rst  action.cpp  ami.cpp  setup.py  targets.csv  test.py
ami/python/ami/: __init__.py  __version__.py  ami.py  bind.py  functions.py
ami/python/include/: action.hpp  ami.hpp
ami/tests/: CMakeLists.txt  action-new-close.c  ami-items.c  ami-new-close.c  amitest.sh.cmake  api-variables.c  astnode.c  braces.ami  braces.ami.test  csv.ami  csvarray.c  csvfields.c  field-assignment.ami  field-assignment.ami.test  first.sal  functions.ami  functions.ami.test  include.ami  include.ami.test  loop2-then-action.ami  loop2-then-action.ami.test  mixedvars.ami  mixedvars.ami.test  non-existingvar.ami  non-existingvar.ami.test  repeat-in-repeat.ami  repeat-in-repeat.ami.test  second.sal  sleepcursor.c  slice.ami  slice.ami.test  strings.ami  strings.ami.test  test-max.ami  test-max.ami.test  test-sleep.ami  test.csv  vars.ami  vars.ami.test
ccraft/: Makefile  ccraft.c  ccraft.h  ccraft.proto3  read.c  utils.c  utils.h
classification/: security-actions-matrix.csv
classification/synonyms/: list-1.csv
classification/taxonomies/: pcraft.csv
cpcapng/: CMakeLists.txt  README.md
cpcapng/bindings/python/: CMakeLists.txt  pycapng.cpp  pycapng.hpp
cpcapng/bindings/python/examples/: read.py
cpcapng/doc/: draft-tuexen-opsawg-pcapng-04.txt
cpcapng/lib/: CMakeLists.txt  blocks.c  io.c
cpcapng/lib/include/cpcapng/: blocks.h  cpcapng.h  io.h  linktypes.h
cpcapng/lib/tests/: CMakeLists.txt  read.c  writeall.c
csv/: user_agents.csv  users.csv
doc/: pcraft-logo.pov  plugins.md  scenario.md  taxonomy.md
doc/handbook/: Makefile  pcraft-handbook.tex
docker/: docker-compose.yaml
docker/pcraft/: Dockerfile  runme.1st
logwriter/: LogContext.py  TemplateBuilder.py  slog.py
logwriter/plugins/: aws-cloudtrail-AwsConsoleSignIn.py  aws-vpc-flow.py  bluecoat-proxysg-main.py  cloudtrail.py  corelight-ntp.py  crowdstrike-dnsrequest.py  fidelis.py  fortinet-traffic.py  gcp.py  hbss-agent.py  hbss-audit.py  hbss-epo.py  hbss-intrusion.py  mcafee-edr.py  mcafee-emailgateway.py  mswin-o365.py  mswin-powershell.py  mswin-security.py  mswin-sysmon.py  named.py  netflow.py  okta.py  paloalto-firewall.py  paloalto-threat.py  paloalto-threat_threats.csv  paloalto-threat_threats.csv.nfo  ssh.py  suricata.py  syslog.py  tanium.py  zscaler-access.py
logwriter/templates/barracuda/: default.csv  firewall.tmpl
logwriter/templates/corelight/: default.csv  ntp.tmpl
logwriter/templates/crowdstrike/: DnsRequest.tmpl
logwriter/templates/fortinet/: default.csv  ips.tmpl  ips2.tmpl  traffic.tmpl  traffic2.default  voip.default
logwriter/templates/netflow/: default.csv  v9.tmpl
logwriter/templates/okta/: default.csv
logwriter/templates/sophos/: default.csv  xg.tmpl
logwriter/templates/suricata/: default.csv  fast.tmpl
logwriter/templates/syslog/: default.csv  msg.tmpl  standard.tmpl
logwriter/templates/tanium/: default.csv  installedapps.tmpl  threats.tmpl
logwriter/tools/: cloudtrail-maker.py  event-4660.xml  flatten-json.py  mswin2logstash14.py
parsuricata/: __init__.py  _parser.py  rules.py  transformer.py
pcraft/: Application.py  Defaults.py  Functions.py  LibraryContext.py  LogsBuilder.py  PackageManager.py  Packet.py  PcapBuilder.py  Pipe.py  Plugins.py  PluginsContext.py  PluginsData.py  SendData.py  Sessionizer.py  TemplateBuilder.py  VariablesState.py  VirtualPacket.py  __version__.py  confnames.py  io.py  utils.py
pcraft/functions/: __init__.py  fromcsv.py  hostname.py
pcraft/plugins/: Controller.py  DNSConnection.py  FakeNames.py  GenerateNewDomain.py  HTTPConnection.py  HTTPPostConnection.py  HostnameFromIP.py  LogCall.py  MakeVariables.py  PcapImport.py  Ping.py  PrintVariables.py  SMTPReceive.py  Sleep.py  Suricata.py  TcpRst.py  TcpSynAck.py  Void.py  _utils.py
pkg/available/Box/conf/: log.conf  (+1 more)
pkg/enabled/: README.md  enable-all.sh
samples/: controller.ami  controller.yaml  demo.ami  dns.ami  fromcsv.ami  fromcsv.csv  fromcsv.yaml  hello.ami  hello.yaml  hostname.ami  hostname.yaml  logcall.ami  phishing.yaml  ping.ami  ping.yaml  postdata.yaml  suricata.ami  suricata.yaml  xme.yaml
scenarios/CVE-2021-44228/: log4j-2.ami  log4j.ami  resp.html
scenarios/hafnium/: CVE-2021-26855.py  attacker.csv  domainname.csv  ecp-ua.csv  exchange-proxylogon-remoteexec.rb  filepath.csv  hafnium.ami  mega.pcap  post-ua.csv  sha256.csv
tests/: makevars.yaml
tools/: crowdstrike-maker.py  fakeusers.py  freemind2ami.py  misp2ami.py  nxlog-maker.py  pcap2ami.py  pcap2csv.sh
(+3381 files in other folders)
